--- a/create_pt_files.ipynb
+++ b/create_pt_files.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -56,10 +56,10 @@
     }
    ],
    "source": [
-    "# === 1. Path setup ===\n",
+    "# setting up path\n",
     "path = \"C:/Users/jono_/.cache/kagglehub/datasets/a2015003713/militaryaircraftdetectiondataset/versions/86/crop\"\n",
     "\n",
-    "# === 2. Collect image paths and labels ===\n",
+    "# Collect image paths and labels\n",
     "images = []\n",
     "labels = []\n",
     "\n",
@@ -80,10 +80,11 @@
     "    \"military_aircraft_crop.csv\", index=False\n",
     ")\n",
     "\n",
-    "# === 3. Define Transforms ===\n",
+    "# mean and std are pre-calculated from the dataset\n",
     "mean = [0.4913, 0.5240, 0.5560]\n",
     "std = [0.1958, 0.1944, 0.1987]\n",
     "\n",
+    "# Transform for training set\n",
     "transform_train = transforms.Compose(\n",
     "    [\n",
     "        transforms.Resize((224, 224)),\n",
@@ -94,6 +95,7 @@
     "    ]\n",
     ")\n",
     "\n",
+    "# Transform for validation and test sets\n",
     "transform_eval = transforms.Compose(\n",
     "    [\n",
     "        transforms.Resize((224, 224)),\n",
@@ -102,7 +104,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "# === 4. Stratified Train/Val/Test Split ===\n",
+    "# Stratified Train/Val/Test Split to match split in other file\n",
     "sss_1 = StratifiedShuffleSplit(n_splits=1, test_size=0.30, random_state=42)\n",
     "train_idx, temp_idx = next(sss_1.split(images, labels))\n",
     "\n",
@@ -112,7 +114,7 @@
     "val_idx = temp_idx[val_idx]\n",
     "test_idx = temp_idx[test_idx]\n",
     "\n",
-    "# === 5. Sanity check: ensure classes are covered in all splits ===\n",
+    "# ensure classes are covered in all splits\n",
     "def check_class_coverage(idxs, labels, name):\n",
     "    subset_labels = labels[idxs]\n",
     "    class_counts = Counter(subset_labels)\n",
@@ -125,7 +127,7 @@
     "check_class_coverage(val_idx, labels, \"Val\")\n",
     "check_class_coverage(test_idx, labels, \"Test\")\n",
     "\n",
-    "# === 6. Helper to apply transform and save ===\n",
+    "# Apply transform and save\n",
     "def transform_and_save(name, idxs, transform):\n",
     "    transformed_images = []\n",
     "    transformed_labels = []\n",
@@ -138,19 +140,18 @@
     "            image_tensor = transform(image)\n",
     "            transformed_images.append(image_tensor)\n",
     "            transformed_labels.append(label)\n",
+    "        # exception for corrupted images\n",
     "        except Exception as e:\n",
     "            print(f\"❌ Skipping {images[i]} due to error: {e}\")\n",
     "\n",
-    "    # Stack image tensors into one big tensor [N, 3, 224, 224]\n",
+    "    # Stack and save as dict\n",
     "    image_tensor_stack = torch.stack(transformed_images)\n",
-    "\n",
-    "    # Save as dict\n",
     "    torch.save(\n",
     "        {\"tensors\": image_tensor_stack, \"labels\": transformed_labels},\n",
     "        f\"military_aircraft_crop_{name}.pt\",\n",
     "    )\n",
     "\n",
-    "# === 7. Process and save each split ===\n",
+    "# apply for train, val, and test sets\n",
     "transform_and_save(\"train\", train_idx, transform_train)\n",
     "transform_and_save(\"val\", val_idx, transform_eval)\n",
     "transform_and_save(\"test\", test_idx, transform_eval)\n",
